@@ -1,5 +1,9 @@
 2001-06-04  Hans Petter Jansson  <hpj@ximian.com>
 
+	* disks-conf.in (get_fdisk): Know more about extended partitions.
+
+2001-06-04  Hans Petter Jansson  <hpj@ximian.com>
+
 	* shares-conf.in (set): Merge things properly, so old options are kept.
 	* filesys.pl.in (xst_filesys_table_merge_subset): Fix doc text.
 
